--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="assets/style.css">
 </head>
 
@@ -41,11 +42,11 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="https://github.com/rsowald" target="_blank"
-                            rel="noopener noreferrer">GitHub</a>
+                            rel="noopener noreferrer"><i class="fab fa-github"></i> GitHub</a>
                         <a class="dropdown-item" href="https://www.linkedin.com/in/renae-sowald" target="_blank"
-                            rel="noopener noreferrer">LinkedIn</a>
+                            rel="noopener noreferrer"><i class="fab fa-linkedin"></i> LinkedIn</a>
                         <a class="dropdown-item" href="https://www.instagram.com/renaesowald/" target="_blank"
-                            rel="noopener noreferrer">Instagram</a>
+                            rel="noopener noreferrer"><i class="fab fa-instagram"></i> Instagram</a>
                     </div>
                 </li>
             </ul>
@@ -69,12 +70,10 @@
                         <img class="float-right rounded portrait mb-2 ml-2" src="assets/aboutMe/PORTRAIT.jpg"
                             alt="Self Portrait">
                         <p>I was born in Ohio, had several years of moving around the United States with military
-                            parents,
-                            and moved back to Ohio again in time to graduate high school. I met my future husband when
-                            we
-                            were set up on a blind date for Homecoming in my junior year of high school. We went to
-                            college together at
-                            The Ohio State University and got married a week after graduation.</p>
+                            parents, and moved back to Ohio again in time to graduate high school. I met my future
+                            husband when we were set up on a blind date for Homecoming in my junior year of high school.
+                            We went to college together at The Ohio State University and got married a week after
+                            graduation.</p>
                         <img class="float-left rounded my-2 img-fluid mb-2 mr-2"
                             src="assets/aboutMe/Oval_Ohio_State.jpg" alt="Ohio State Oval">
                         <p>At OSU, I earned 2 BA degrees in History and English, but had no interest in teaching or
@@ -93,9 +92,10 @@
                             very rewarding in its own ways. With my youngest set to start Kindergarten in the fall of
                             2021, it is time to focus on other projects as well.</p>
                         <p> I am enrolled in a Trilogy curriculum coding boot camp through the University of Washington.
-                            One third of the way through, I can already call myself a front end developer. The
-                            goal is to be a full stack developer by the end of the course in June. I will be completing
-                            several projects throughout, which I will post here. To date, I have covered these major
+                            Two-thirds of the way through, I can already call myself a full stack developer. The only
+                            part of my MERN stack I haven't yet learned is ReactJS. I will be completing
+                            several more projects before getting my certificate in June, which I will post here. To
+                            date, I have covered these major
                             topics:</p>
                         <ul>
                             <li>HTML</li>
@@ -106,7 +106,12 @@
                             <li>DOM traversal and manipulation</li>
                             <li>Using client-side local storage</li>
                             <li>Browser and third party APIs</li>
-                            <li>node.js</li>
+                            <li>Node.js</li>
+                            <li>Express</li>
+                            <li>MySQL</li>
+                            <li>Sequelize</li>
+                            <li>MongoDB</li>
+                            <li>Mongoose</li>
                         </ul>
                         <p>This page is a project to showcase a responsive portfolio using Bootstrap, but it is also the
                             beginning of my professional portfolio. It was designed to be responsive, and it will
