--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                     <a class="nav-link" href="about.html">About<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link" href="resume.html">Resume</a>
                 </li>
                 <!-- dropdown menu for social media links  -->
                 <li class="nav-item dropdown">
