--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="assets/style.css">
 </head>
 
@@ -31,7 +32,7 @@
                     <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link" href="resume.html">Resume</a>
                 </li>
                 <!-- dropdown menu for social media links  -->
                 <li class="nav-item dropdown">
@@ -41,11 +42,11 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="https://github.com/rsowald" target="_blank"
-                            rel="noopener noreferrer">GitHub</a>
+                            rel="noopener noreferrer"><i class="fab fa-github"></i> GitHub</a>
                         <a class="dropdown-item" href="https://www.linkedin.com/in/renae-sowald" target="_blank"
-                            rel="noopener noreferrer">LinkedIn</a>
+                            rel="noopener noreferrer"><i class="fab fa-linkedin"></i> LinkedIn</a>
                         <a class="dropdown-item" href="https://www.instagram.com/renaesowald/" target="_blank"
-                            rel="noopener noreferrer">Instagram</a>
+                            rel="noopener noreferrer"><i class="fab fa-instagram"></i> Instagram</a>
                     </div>
                 </li>
             </ul>
@@ -55,7 +56,7 @@
     <!-- container wrapper for responsive content -->
     <main class="container-sm">
         <div class="row">
-            <!-- div container to keep container 8 col wide -->
+            <!-- div container to keep container 9 col wide -->
             <article class="col-sm-9 background">
                 <div class="row">
                     <div class="col-sm-12">
@@ -73,9 +74,27 @@
                             •
                             <a href="https://github.com/rsowald/MealPlanner" target="_blank" class="card-text">GitHub
                                 Repo</a>
-                            <p class="card-text"><small>AJAX calls to third party APIs, jQuery, CSS</small></p>
+                            <p class="card-text"><small>AJAX calls to third party APIs, jQuery, JavaScript modal,
+                                    CSS</small></p>
                         </div>
                     </div>
+                    <div class="card mb-3 portfolio">
+                        <img class="card-img-top" src="assets/portfolioScreenshots/grammagram.jpg"
+                            alt="GrammaGram application">
+                        <div class="card-body">
+                            <h5 class="card-title">GrammaGram</h5>
+                            <a href="https://boiling-savannah-28129.herokuapp.com/" target="_blank"
+                                class="card-text">Demo</a>
+                            •
+                            <a href="https://github.com/rsowald/GrammaGram" target="_blank" class="card-text">GitHub
+                                Repo</a>
+                            <p class="card-text"><small>Full stack with MySQL database, Handlebars.js views, Passport.js
+                                    authentication, and an Express server deployed to Heroku</small></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-deck">
                     <div class="card mb-3 portfolio">
                         <img class="card-img-top" src="assets/portfolioScreenshots/Weather_Dashboard.jpg"
                             alt="Weather dashboard application">
@@ -85,40 +104,54 @@
                                 class="card-text">Demo</a>
                             •
                             <a class="card-text" href="https://github.com/rsowald/WeatherDashboard"
-                                target="_blank">GitHub
-                                Repo</a>
+                                target="_blank">GitHub Repo</a>
                             <p class="card-text"><small>AJAX calls to third party APIs, jQuery and CSS</small>
                             </p>
                         </div>
                     </div>
+                    <div class="card mb-3 portfolio">
+                        <img class="card-img-top" src="assets/portfolioScreenshots/tech_blog.jpg"
+                            alt="Tech Blog application">
+                        <div class="card-body">
+                            <h5 class="card-title">I Blog Technically</h5>
+                            <a href="https://rhubarb-cobbler-10166.herokuapp.com/" target="_blank"
+                                class="card-text">Demo</a>
+                            •
+                            <a class="card-text" href="https://github.com/rsowald/TechBlog" target="_blank">GitHub
+                                Repo</a>
+                            <p class="card-text"><small>Full stack with MySQL database, Handlebars.js views, and an
+                                    Express server deployed to Heroku</small>
+                            </p>
+                        </div>
+                    </div>
+
                 </div>
 
                 <div class="card-deck">
                     <div class="card mb-3 portfolio">
-                        <img src="assets/portfolioScreenshots/password_generator.jpg" class="card-img-top"
-                            alt="password generator application">
+                        <img src="assets/portfolioScreenshots/team_profile_generator.jpg"
+                            alt="Team Profile Generator application" class="card-img-top">
                         <div class="card-body">
-                            <h5 class="card-title">Password Generator</h5>
-                            <a href="https://rsowald.github.io/PasswordGenerator/" target="_blank"
-                                class="card-text">Demo</a>
+                            <h5 class="card-title">Team Profile Generator</h5>
+                            <a href="assets/portfolioScreenshots/team_profile_generator.jpg" target="_blank"
+                                class="card-text">Generated
+                                Example</a>
                             •
-                            <a class="card-text" href="https://github.com/rsowald/PasswordGenerator"
-                                target="_blank">GitHub
+                            <a href="https://github.com/rsowald/TeamProfileGenerator" target="_blank"
+                                class="card-text">GitHub
                                 Repo</a>
-                            <p class="card-text"><small>Simple JS functionality.</small></p>
+                            <p class="card-text"><small>Command Line App to generate styled HTML</small></p>
                         </div>
                     </div>
                     <div class="card mb-3 portfolio">
-                        <img src="assets/portfolioScreenshots/JS_quiz.jpg" class="card-img-top"
-                            alt="javascript quiz application">
+                        <img src="assets/portfolioScreenshots/employee_tracker.jpg" alt="Employee Tracker CMS"
+                            class="card-img-top">
                         <div class="card-body">
-                            <h5 class="card-title">Javascript Quiz</h5>
-                            <a href="https://rsowald.github.io/JsCodingQuiz/" target="_blank" class="card-text">Demo</a>
-                            •
-                            <a href="https://github.com/rsowald/JsCodingQuiz" target="_blank" class="card-text">GitHub
-                                Repo</a>
-                            <p class="card-text"><small>Javascript, JS DOM manipulation, and local storage.</small>
-                            </p>
+                            <h5 class="card-title">Employee Tracker CMS</h5>
+                            <a href="https://github.com/rsowald/EmployeeTrackerCMS" target="_blank"
+                                class="card-text">GitHub Repo</a>
+                            <p class="card-text"><small>Command Line App to track employees, their roles, and their
+                                    managers.</small></p>
                         </div>
                     </div>
                 </div>
@@ -138,6 +171,78 @@
                         </div>
                     </div>
                     <div class="card mb-3 portfolio">
+                        <img src="assets/portfolioScreenshots/JS_quiz.jpg" class="card-img-top"
+                            alt="javascript quiz application">
+                        <div class="card-body">
+                            <h5 class="card-title">Javascript Quiz</h5>
+                            <a href="https://rsowald.github.io/JsCodingQuiz/" target="_blank" class="card-text">Demo</a>
+                            •
+                            <a href="https://github.com/rsowald/JsCodingQuiz" target="_blank" class="card-text">GitHub
+                                Repo</a>
+                            <p class="card-text"><small>Javascript, JS DOM manipulation, and local storage.</small>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-deck">
+                    <div class="card mb-3 portfolio">
+                        <img class="card-img-top" src="assets/portfolioScreenshots/readme_generator.jpg"
+                            alt="ReadMe generator application">
+                        <div class="card-body">
+                            <h5 class="card-title">ReadMe Generator</h5>
+                            <a href="https://github.com/rsowald/ReadMeGenerator" target="_blank"
+                                class="card-text">GitHub
+                                Repo</a>
+                            <p class="card-text"><small>Node.js, and npm package Inquirer</small></p>
+                        </div>
+                    </div>
+                    <div class="card mb-3 portfolio">
+                        <img src="assets/portfolioScreenshots/note_taker.jpg" class="card-img-top"
+                            alt="Express Note Taker application">
+                        <div class="card-body">
+                            <h5 class="card-title">Express Note Taker</h5>
+                            <a href="https://mighty-headland-38310.herokuapp.com/" target="_blank"
+                                class="card-text">Demo</a>
+                            •
+                            <a href="https://github.com/rsowald/ExpressNoteTaker" target="_blank"
+                                class="card-text">GitHub
+                                Repo</a>
+                            <p class="card-text"><small>Javascript, jQuery, Express server and routes.</small>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <!-- <div class="card-deck"> -->
+                <!-- <div class="card mb-3 portfolio">
+                        <img src="assets/portfolioScreenshots/password_generator.jpg" class="card-img-top"
+                            alt="password generator application">
+                        <div class="card-body">
+                            <h5 class="card-title">Password Generator</h5>
+                            <a href="https://rsowald.github.io/PasswordGenerator/" target="_blank"
+                                class="card-text">Demo</a>
+                            •
+                            <a class="card-text" href="https://github.com/rsowald/PasswordGenerator"
+                                target="_blank">GitHub
+                                Repo</a>
+                            <p class="card-text"><small>Simple JS functionality.</small></p>
+                        </div>
+                    </div> -->
+                <!-- <div class="card mb-3 portfolio">
+                        <img src="assets/portfolioScreenshots/Band_Tribute.JPG" alt="Neon Trees tribute page"
+                            class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Neon Trees Tribute Page</h5>
+                            <a href="https://rsowald.github.io/BandTribute/" target="_blank" class="card-text">Demo</a>
+                            •
+                            <a href="https://github.com/rsowald/BandTribute" target="_blank" class="card-text">GitHub
+                                Repo</a>
+                            <p class="card-text"><small>Static HTML with no CSS</small></p>
+                        </div>
+                    </div> -->
+                <!-- <div class="card mb-3 portfolio">
                         <img class="card-img-top" src="assets/portfolioScreenshots/Horiseon_Refactor.JPG"
                             alt="Horiseon Media page">
                         <div class="card-body">
@@ -151,11 +256,8 @@
                             <p class="card-text"><small>Refactored for maximum accessibility and sustainability</small>
                             </p>
                         </div>
-                    </div>
-                </div>
-
-                <div class="card-deck">
-                    <div class="card mb-3 portfolio">
+                    </div> -->
+                <!-- <div class="card mb-3 portfolio">
                         <img src="assets/portfolioScreenshots/Favorite_Animal.JPG" alt="red panda information page"
                             class="card-img-top">
                         <div class="card-body">
@@ -167,8 +269,8 @@
                                 Repo</a>
                             <p class="card-text"><small>Static HTML with CSS floats</small></p>
                         </div>
-                    </div>
-                    <div class="card mb-3 portfolio">
+                    </div> -->
+                <!-- <div class="card mb-3 portfolio">
                         <img class="card-img-top" src="assets/portfolioScreenshots/Prework_About_Me.JPG"
                             alt="About Renae">
                         <div class="card-body">
@@ -181,39 +283,8 @@
                                 Repo</a>
                             <p class="card-text"><small>Static HTML with minimal CSS</small></p>
                         </div>
-                    </div>
-                </div>
-
-                <div class="card-deck">
-                    <div class="card mb-3 portfolio">
-                        <img src="assets/portfolioScreenshots/Band_Tribute.JPG" alt="Neon Trees tribute page"
-                            class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Neon Trees Tribute Page</h5>
-                            <a href="https://rsowald.github.io/BandTribute/" target="_blank" class="card-text">Demo</a>
-                            •
-                            <a href="https://github.com/rsowald/BandTribute" target="_blank" class="card-text">GitHub
-                                Repo</a>
-                            <p class="card-text"><small>Static HTML with no CSS</small></p>
-                        </div>
-                    </div>
-
-                    <div class="card mb-3 portfolio">
-                        <img src="assets/portfolioScreenshots/team_profile_generator.jpg"
-                            alt="Team Profile Generator application" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Team Profile Generator</h5>
-                            <a href="assets/portfolioScreenshots/team_profile_generator.jpg" target="_blank"
-                                class="card-text">Generated
-                                Example</a>
-                            •
-                            <a href="https://github.com/rsowald/TeamProfileGenerator" target="_blank"
-                                class="card-text">GitHub
-                                Repo</a>
-                            <p class="card-text"><small>Command Line App to generate styled HTML</small></p>
-                        </div>
-                    </div>
-                </div>
+                    </div>-->
+                <!-- </div> -->
             </article>
         </div>
 
